--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,9 @@
 
 {% block main_area %}
 
-    <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}</h1>
+    <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
+    {% if tag %}<span class="badge badge-light"><i class="fas fa-tags"></i>{{tag }} ({{ tag.post_set.count }})</span>{% endif %}
+    </h1>
 
     {% if post_list.exists %}
         {% for p in post_list %}
@@ -32,7 +34,7 @@
                     <br/>
                     <br/>
                 {% endif %}
-                
+
                 <a href="{{ p.get_absolute_url }}" class="btn btn-primary"> Read More &rarr;</a>
             </div>
             <div class="card-footer text-muted">
